Add ES Modules polifyll

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 </head>
 <body>
   <main id="piano"></main>
+
+  <!-- If your browser does not support yet ES modules -->
+  <script src="node_modules/browser-es-module-loader/dist/babel-browser-build.js"></script>
+  <script src="node_modules/browser-es-module-loader/dist/browser-es-module-loader.js"></script>
+
   <script type="module" src="index.js"></script>
 </body>
 </html>
