--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
   <title>BandLab at WAC</title>
   <style type="text/css">
     html {
-      background: #333;
+      background: #282c33;
       color: #fff;
-    }
-
-    #piano {
       font-family: monospace;
+      font-size: 16px;
+      line-height: 1.4;
     }
 
     .active {
-      color: red;
+      color: #dc3710;
     }
   </style>
 </head>
 <body>
-  <main id="piano"></main>
+  <main></main>
 
-  <!-- If your browser does not support yet ES modules -->
   <script src="node_modules/browser-es-module-loader/dist/babel-browser-build.js"></script>
   <script src="node_modules/browser-es-module-loader/dist/browser-es-module-loader.js"></script>
+  <script>
+    const loader = new BrowserESModuleLoader();
+    loader.import('./index.js');
+  </script>
 
-  <script type="module" src="index.js"></script>
+  <!-- <script type="module" src="index.js"></script> -->
 </body>
 </html>
