--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BandLab at WAC</title>
+  <title>BandLab - WAC 2017</title>
   <style type="text/css">
     html {
       background: #282c33;
